test/negative/invariant3.mli
type t = int * int (*@ invariant 1 > 0 *)
